# opengl-with-jank

./: .clangd  .gitignore  .gitmodules  CLAUDE.md  CPP_INTEROP_DOCUMENTATION.md  Idle Crouching.fbx  Jump.fbx  README.md  Slow Run.fbx  build-dist  compile  compile-server  course.edn  death1.ozz  demo_run  jank-engine.edn  package-client  run  run1.ozz  setup  stand1.ozz
.clj-kondo/: config.edn
.github/workflows/: build-linux.yml  build-macos.yml  build.yml
docs/: build-jank-linux-x64.md  camera-rotation-architecture.md
engine/: .clangd  lein-jank-config.clj  project.clj
engine/assets/shaders/: basic_fragment.glsl  basic_vertex.glsl  graphics2d_vertex.glsl  line_fragment.glsl  line_geometry.glsl  line_vertex.glsl  skinned_fragment.glsl  text_fragment.glsl  text_vertex.glsl
engine/docs/: bake-distribution.md  build-jank-linux-x64.md
engine/include/: gl_utils.h  gl_wrappers.h
engine/include/engine/: animation_mesh_impl.h  collision_impl.h  gfx2d_graphics_impl.h  gltf_headless_impl.h  gltf_impl.h  io_impl.h
engine/scripts/: bake  build-engine  build-linux-server  build-ozz-tools.sh  bundle-standalone  package-client  setup  test-animation-pipeline  verify-portability  xcrun-stub
engine/scripts/platform/: common.sh  linux.sh  macos.sh  windows.sh
engine/src/engine/: macros.jank
engine/tools/gla2ozz/: CMakeLists.txt  animation_cfg_parser.cc  gla_parser.cc  gla_tests.cc  movement_animations.json
engine/tools/ozz-retarget/: bone_mapper.cc  bone_mapper.h  retarget_tests.cc
engine/tools/ozz2gltf/: CMakeLists.txt  ozz2gltf.cc
game/: .clangd  jank-engine.edn  lein-jank-config.clj  output.map  project.clj
game/include/sca/: client_impl.h  editor_impl.h  render_impl.h  viewer_impl.h
game/models/: hills.gltf  test-level.gltf
game/src/sca/: animation.jank  baked.jank  camera.jank  client.jank  core.jank  physics.jank  server.jank  viewer.jank
include/: animation_types.h
include/engine/: animation_impl.h  animation_mesh_impl.h  collision_impl.h  gfx2d_graphics_impl.h  gfx2d_text_impl.h  gltf_headless_impl.h  gltf_impl.h  io_impl.h  lines_impl.h  networking_impl.h  shaders_impl.h
include/examples/: strafe_impl.h
libs/macos-arm64/stb/: stb_all_impl.c
models/: grid-sand-nc.gltf  grid-sand.gltf  grid.gltf  hills.gltf  player.gltf
models/player/: Armature_mixamo.com_Layer0.ozz  crouch.ozz  idle.ozz  jump.ozz  jumping_up.gltf  mixamo_char.gltf  mixamo_mesh.ozz  mixamo_skeleton.ozz  run.ozz  skeleton.ozz  slow_run.gltf
models/player/animations/: BOTH_A1_T__B_.ozz  BOTH_A2_BR_TL.ozz  BOTH_A3_BL_TR.ozz  BOTH_A3_BR_TL.ozz  BOTH_A6_T__B_.ozz  BOTH_A6__L__R.ozz  BOTH_A7_BL_TR.ozz  BOTH_A7_KICK_F.ozz  BOTH_A7_KICK_R.ozz  BOTH_A7_KICK_R_AIR.ozz  BOTH_A7_KICK_S.ozz  BOTH_ATTACK10.ozz  BOTH_CROUCH1WALK.ozz  BOTH_FLIP_F.ozz  BOTH_FORCEINAIRBACK1.ozz  BOTH_FORCEINAIRLEFT1.ozz  BOTH_FORCEINAIRRIGHT1.ozz  BOTH_FORCEJUMP1.ozz  BOTH_FORCEJUMPBACK1.ozz  BOTH_FORCELANDLEFT1.ozz  BOTH_FORCELANDRIGHT1.ozz  BOTH_GETUP4.ozz  BOTH_GETUP5.ozz  BOTH_GETUP_FROLL_B.ozz  BOTH_GETUP_FROLL_F.ozz  BOTH_GETUP_FROLL_L.ozz  BOTH_GETUP_FROLL_R.ozz  BOTH_JUMPBACK1.ozz  BOTH_KNOCKDOWN5.ozz  BOTH_LANDBACK1.ozz  BOTH_ROLL_R.ozz  BOTH_RUN2.ozz  BOTH_SABERDUAL_STANCE.ozz  BOTH_SABERFAST_STANCE.ozz  BOTH_SABERPULL.ozz  BOTH_SABERTHROW1START.ozz  BOTH_SWIM_IDLE1.ozz  BOTH_WALK1.ozz  BOTH_WALK2.ozz  BOTH_WALKBACK1.ozz  (+4 more)
models/player/jka/: BOTH_A1_BL_TR.ozz  BOTH_A1_BR_TL.ozz  BOTH_A1_SPECIAL.ozz  BOTH_A1_TL_BR.ozz  BOTH_A1_TR_BL.ozz  BOTH_A1_T__B_.ozz  BOTH_A1__L__R.ozz  BOTH_A1__R__L.ozz  BOTH_A2_BL_TR.ozz  BOTH_A2_BR_TL.ozz  BOTH_A2_SPECIAL.ozz  BOTH_A2_STABBACK1.ozz  BOTH_A2_TL_BR.ozz  BOTH_A2_TR_BL.ozz  BOTH_A2_T__B_.ozz  BOTH_A2__L__R.ozz  BOTH_A2__R__L.ozz  BOTH_A3_BL_TR.ozz  (+1407 more)
scripts/: analyze-anim-debug  analyze-skeleton  build-dist  build-engine  build-gla2ozz  build-linux  build-linux-server  build-ozz2gltf  compile  compile-server  embed-assets.clj  package-client  package-client-linux  run  setup  test-animation-pipeline
scripts/platform/: common.sh  linux.sh
shaders/: basic_fragment.glsl  basic_vertex.glsl  skinned_vertex.glsl
src/app/: clet.jank  core.jank  macros.jank
test_compile/test/: simple.jank
test_compile/test2/: cppval.jank  cppval2.jank  cppval3.jank
tools/gla2ozz/: animation_cfg_parser.h  coordinate_convert.h  gla2ozz.cc  gla_format.h  gla_parser.cc  gla_parser.h  gla_tests.cc  jka_all_animations.json  jka_config.json  test_stand.json  test_stand1_only.json
tools/ozz-retarget/: CMakeLists.txt  bone_mapper.h  humanoid_to_mixamo.json  jka_to_mixamo.json  retarget.cc
tools/ozz2gltf/: skeleton_converter.cc  skeleton_converter.h  soa_utils.h
(+229 files in other folders)
